--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
             <ion-icon name="menu-outline"></ion-icon>
         </div>
         <nav id="mobile-nav">
-            
             <ul>
                 <li><a href="#"><i onclick="toggleMenu('hide')" id="close" class="fa-solid fa-xmark"></i></a></li>
-                <li><a href="#">Home</a></li>
-                <!--<li><a href="#product">Product</a></li>-->
-                <li><a href="#features">Features</a></li>
-                <li><a href="#features">Pricing</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#" onclick="toggleMenu('hide')">Home</a></li>
+                <li><a href="#features" onclick="toggleMenu('hide')">Features</a></li>
+                <li><a href="#features" onclick="toggleMenu('hide')">Pricing</a></li>
+                <li><a href="#about" onclick="toggleMenu('hide')">About Us</a></li>
+                <li><a href="#team" onclick="toggleMenu('hide')">Team</a></li>
+                <li><a href="#contact" onclick="toggleMenu('hide')">Contact Us</a></li>
             </ul>
         </nav>
     </header>
