--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-    <header>
+    <header id="#">
         <div id="logo-container">
             <!--<h1 id="logo">Q</h1>-->
             <img src="assets/qwiks-white.png" />
