--- a/index.html
+++ b/index.html
@@ -172,44 +172,44 @@
                 <div class="team-member">
                     <img src="assets/teams/aaron-crop.png" alt="Member 1">
                     <h3>Aaron Ayoku</h3>
-                    <p>CEO</p>
+                    <p>COO / Visionary Leader (Global)</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/IMG-20231109-WA0011.jpg" alt="Member 2">
+                    <img src="assets/teams/jane.png" alt="Member 2">
                     <h3>Jane Smith</h3>
                     <p>CTO</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/person-2.jpg" alt="Member 3">
-                    <h3>Emily Johnson</h3>
-                    <p>Lead Designer</p>
+                    <img src="assets/teams/cyril.png" alt="Member 3">
+                    <h3>Cyril C. Njoku</h3>
+                    <p>Regional Head of Operations</p>
                 </div>
                 <div class="team-member">
                     <img src="assets/teams/taiwo-kazeem-crop.png" alt="Member 4">
-                    <h3>Michael Brown</h3>
-                    <p>Lead Developer</p>
+                    <h3>Taiwo Kazeem</h3>
+                    <p>Africa Station Base Coordinator</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/person-4.jpg" alt="Member 5">
-                    <h3>Sarah Wilson</h3>
-                    <p>Project Manager</p>
+                    <img src="assets/teams/diedre.png" alt="Member 5">
+                    <h3>Diedre Darries</h3>
+                    <p>Head of Customer Relations</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/person-5.jpg" alt="Member 6">
+                    <img src="assets/teams/logan.png" alt="Member 6">
+                    <h3>Logan Harris</h3>
+                    <p>Product Strategist, Design Forest <br>US Station Base Director</p>
+                    <p>Nigerian Base Station Director</p>
+                </div>
+                <div class="team-member">
+                    <img src="assets/teams/isaac.png" alt="Member 6">
                     <h3>Isaac Rufus</h3>
                     <p>App Developer</p>
                     <p>Nigerian Base Station Director</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/person-6.jpg" alt="Member 6">
-                    <h3>Isaac Rufus</h3>
-                    <p>App Developer</p>
-                    <p>Nigerian Base Station Director</p>
-                </div>
-                <div class="team-member">
-                    <img src="assets/teams/person-7.jpg" alt="Member 6">
-                    <h3>David Lee</h3>
-                    <p>Marketing Head</p>
+                    <img src="assets/teams/harees.png" alt="Member 6">
+                    <h3>Harees Khoharo</h3>
+                    <p>Business Analyst <br>Pakistan Station Base Director</p>
                 </div>
             </div>
         </section>         
