--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
                 <div class="team-member">
                     <img src="assets/teams/logan.png" alt="Member 6">
                     <h3>Logan Harris</h3>
-                    <p>Product Strategist, Design Forest <br>US Station Base Director</p>
-                    <p>Nigerian Base Station Director</p>
+                    <p>Product Strategist<br>US Station Base Director</p>
                 </div>
                 <div class="team-member">
                     <img src="assets/teams/isaac.png" alt="Member 6">
