new changes , pricing added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,48 @@
             </div>
         </section>
         <section class="pricing">
-
+            <h2>Choose your plan</h2>
+            <div class="price-row">
+                <div class="price-col">
+                    <p>Starter</p>
+                    <h3>19$ <span>/ month</span></h3>
+                    <ul>
+                        <li>1 Website</li>
+                        <li>10 GB Disk Space</li>
+                        <li>Free Email Address</li>
+                        <li>Basic Web Builder</li>
+                        <li>No SSL Certificate</li>
+                        <li>Limited Support</li>
+                    </ul>
+                    <button>Add To Cart</button>
+                </div>
+                <div class="price-col">
+                    <p>Advanced</p>
+                    <h3>19$ <span>/ month</span></h3>
+                    <ul>
+                        <li>1 Website</li>
+                        <li>10 GB Disk Space</li>
+                        <li>Free Email Address</li>
+                        <li>Basic Web Builder</li>
+                        <li>No SSL Certificate</li>
+                        <li>Limited Support</li>
+                    </ul>
+                    <button>Add To Cart</button>
+                </div>
+                <div class="price-col">
+                    <p>Premium</p>
+                    <h3>19$ <span>/ month</span></h3>
+                    <ul>
+                        <li>1 Website</li>
+                        <li>10 GB Disk Space</li>
+                        <li>Free Email Address</li>
+                        <li>Basic Web Builder</li>
+                        <li>No SSL Certificate</li>
+                        <li>Limited Support</li>
+                    </ul>
+                    <button>Add To Cart</button>
+                </div>
+            </div>
         </section>
         <!--
         <section id="product">
@@ -200,15 +241,20 @@
                     <p>Product Strategist<br>US Station Base Director</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/isaac.png" alt="Member 6">
+                    <img src="assets/teams/isaac.png" alt="Member 7">
                     <h3>Isaac Rufus</h3>
                     <p>App Developer</p>
-                    <p>Nigerian Base Station Director</p>
+                    <p>Nigerian Station Base Director</p>
                 </div>
                 <div class="team-member">
-                    <img src="assets/teams/harees.png" alt="Member 6">
+                    <img src="assets/teams/harees.png" alt="Member 8">
                     <h3>Harees Khoharo</h3>
                     <p>Business Analyst <br>Pakistan Station Base Director</p>
+                </div>
+                <div class="team-member">
+                    <img src="assets/teams/milja.png" alt="Member 9">
+                    <h3>Milja</h3>
+                    <p>iOS Developer <br>Serbian Station Base Director</p>
                 </div>
             </div>
         </section>         
