--- a/index.html
+++ b/index.html
@@ -269,18 +269,18 @@
                         <p>Suite 456,</p>
                         <p>New York, NY 10001</p>
                         <p>Phone: (123) 456-7890</p>
-                        <p>Email: contact@business.com</p>
+                        <p>Email: admin@qwiks.com</p>
                     </div>
                 </div>
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
                     <form action="#" method="post">
                         <div class="form-group">
-                            <label for="name">Your Name</label>
+                            <label for="name">Name</label>
                             <input type="text" id="name" name="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Your Email</label>
+                            <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
@@ -288,7 +288,7 @@
                             <input type="text" id="subject" name="subject" required>
                         </div>
                         <div class="form-group">
-                            <label for="message">Your Message</label>
+                            <label for="message">Message</label>
                             <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
                         <button type="submit">Send Message</button>
